# finance-tracker-ladder-test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker.env  personal-expenser-tracker.json  pyproject.toml  requirements.txt
accounts/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
expense_tracker/: exceptions.py  settings.py  urls.py
finance/: admin.py  models.py  serializers.py  views.py
finance/migrations/: 0001_initial.py
tests/: __init__.py  conftest.py  test_auth.py  test_edge_cases.py  test_finance.py
